这个故事还没有完结。——亚索

--- a/check-client/build.gradle
+++ b/check-client/build.gradle
@@ -1,8 +1,8 @@
 apply from: "${rootDir}/gradle/publish.gradle"
 dependencies {
-  compile "com.hfhk.cairo:client:${cairoVersion}"
+  implementation "com.hfhk.cairo:client:${cairoVersion}"
 
-  compile project(":check-domain")
+  implementation project(":check-domain")
 
 }
 
