--- a/check-domain/build.gradle
+++ b/check-domain/build.gradle
@@ -1,6 +1,6 @@
 apply from: "${rootDir}/gradle/publish.gradle"
 
 dependencies {
-  compile "com.hfhk.cairo:auth-domain:${cairoVersion}"
+  implementation "com.hfhk.cairo:auth-domain:${cairoVersion}"
 
 }
