--- a/build.gradle
+++ b/build.gradle
@@ -1,33 +1,28 @@
 buildscript {
-  ext {
-    javaVersion = 11
-
-    springVersion = '5.2.9.RELEASE'
-    springBootVersion = '2.3.4.RELEASE'
-    springCloudVersion = 'Hoxton.SR8'
-    springCloudAlibabaVersion = '2.2.2.RELEASE'
-
-    cairoVersion = '0.1.0-SNAPSHOT'
-    hutoolVersion = '5.3.10'
-    mybatisVersion = '3.4.0'
-    easyexcelVersion = '2.2.5'
-
-    // tool variable
-    versionRelease = !version.endsWith('SNAPSHOT')
-  }
-
   apply from: "${rootDir}/gradle/repositories.gradle"
 }
 
 plugins {
   id 'io.spring.dependency-management' version '1.0.10.RELEASE' apply false
-  id 'org.springframework.boot' version '2.3.4.RELEASE' apply false
+  id 'org.springframework.boot' version '2.4.1' apply false
 }
 
 allprojects {
   apply from: "${rootDir}/gradle/repositories.gradle"
+  ext {
+    javaVersion = 11
 
-  group = 'com.hfhk.common'
+    springVersion = '5.2.9.RELEASE'
+    springBootVersion = '2.4.1'
+    springCloudVersion = 'Hoxton.SR8'
+    springCloudAlibabaVersion = '2.2.2.RELEASE'
+
+    cairoVersion = '0.1.0-SNAPSHOT'
+    hutoolVersion = '5.3.10'
+
+    // tool variable
+    versionRelease = !version.endsWith('SNAPSHOT')
+  }
 
   tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
@@ -35,6 +30,8 @@ allprojects {
 }
 
 subprojects {
+  group = 'com.hfhk.common'
+
   apply from: "${rootDir}/gradle/java.gradle"
   apply from: "${rootDir}/gradle/dependency-management.gradle"
   apply from: "${rootDir}/gradle/lombok.gradle"
