--- a/check-service/build.gradle
+++ b/check-service/build.gradle
@@ -3,20 +3,21 @@ plugins {
 }
 
 dependencies {
-  annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+  implementation 'org.springframework.boot:spring-boot-starter'
+  annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 
   // actuator
-  implementation "org.springframework.boot:spring-boot-starter-actuator"
+  implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
   // data
-  implementation "org.springframework.boot:spring-boot-starter-data-mongodb"
-  // implementation "org.springframework.boot:spring-boot-starter-data-redis"
-  implementation "org.apache.commons:commons-pool2"
+  implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+  // implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+  implementation 'org.apache.commons:commons-pool2'
 
   // boot
-  implementation "org.springframework.boot:spring-boot-starter-hateoas"
-  implementation "org.springframework.boot:spring-boot-starter-validation"
-  implementation "org.springframework.boot:spring-boot-starter-web"
+  implementation 'org.springframework.boot:spring-boot-starter-hateoas'
+  implementation 'org.springframework.boot:spring-boot-starter-validation'
+  implementation 'org.springframework.boot:spring-boot-starter-web'
 
   // security
   implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -30,7 +31,7 @@ dependencies {
   implementation 'io.github.openfeign:feign-okhttp'
 
   // discovery
-  implementation "com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-discovery"
+  implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-discovery'
   // implementation "com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-config"
 
   // cairo
@@ -39,9 +40,7 @@ dependencies {
   implementation "com.hfhk.cairo.starter:service:${cairoVersion}"
 
   implementation project(':check-domain')
-  implementation "com.hfhk.cairo:auth-client:${cairoVersion}"
 
-  // compile 'io.minio:minio:3.0.10'
 
   // test
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
