--- a/gradle/lombok.gradle
+++ b/gradle/lombok.gradle
@@ -6,8 +6,8 @@ configurations {
 }
 
 dependencies {
-  compile 'org.slf4j:slf4j-api'
   annotationProcessor "org.projectlombok:lombok"
-
   compileOnly "org.projectlombok:lombok"
+
+  implementation 'org.slf4j:slf4j-api'
 }
