这个故事还没有完结。——亚索

--- a/check-service/build.gradle
+++ b/check-service/build.gradle
@@ -3,10 +3,10 @@ plugins {
 }
 
 dependencies {
-  implementation 'org.springframework.boot:spring-boot-starter'
   annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 
   // actuator
+  implementation 'org.springframework.boot:spring-boot-starter'
   implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
   // data
@@ -41,10 +41,9 @@ dependencies {
 
   implementation project(':check-domain')
 
-
   // test
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
+  testImplementation 'org.springframework.security:spring-security-test'
 }
 
 test {
