这个故事还没有完结。——亚索

--- a/gradle/publish.gradle
+++ b/gradle/publish.gradle
@@ -1,6 +1,8 @@
 // maven publish config
 apply plugin: "maven-publish"
-
+ext {
+  versionRelease = !version.endsWith('SNAPSHOT')
+}
 publishing {
   repositories {
     if (versionRelease) {
