--- a/gradle/repositories.gradle
+++ b/gradle/repositories.gradle
@@ -1,9 +1,15 @@
 repositories {
+
   maven {
-    url 'https://maven.aliyun.com/repository/public/'
+    url 'https://maven.aliyun.com/repository/public'
   }
+
   maven {
-    url 'https://maven.aliyun.com/repository/spring/'
+    url 'https://maven.aliyun.com/repository/spring'
+  }
+
+  maven {
+    url 'https://repo.spring.io/libs-milestone'
   }
 
   if (project.hasProperty('repository.release.url')) {
@@ -28,7 +34,6 @@ repositories {
       }
     }
   }
-
-  mavenLocal()
   mavenCentral()
+  mavenLocal()
 }
