这个故事还没有完结。——亚索

--- a/check-domain/build.gradle
+++ b/check-domain/build.gradle
@@ -1,6 +1,6 @@
 apply from: "${rootDir}/gradle/publish.gradle"
 
 dependencies {
-  implementation "com.hfhk.cairo:auth-domain:${cairoVersion}"
+  compile "com.hfhk.auth:auth-domain:${cairoVersion}"
 
 }
