--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@
 # gradle config
 org.gradle.caching=true
 org.gradle.parallel=true
+org.gradle.jvmargs=-Xmx10G -XX:MaxPermSize=0.1G
 
 kotlin.stdlib.default.dependency=false
 
