--- a/check-service/build.gradle
+++ b/check-service/build.gradle
@@ -18,6 +18,7 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-hateoas'
   implementation 'org.springframework.boot:spring-boot-starter-validation'
   implementation 'org.springframework.boot:spring-boot-starter-web'
+  implementation 'org.springframework.session:spring-session-core'
 
   // security
   implementation 'org.springframework.boot:spring-boot-starter-security'
