这个故事还没有完结。——亚索

--- a/check-service/build.gradle
+++ b/check-service/build.gradle
@@ -31,7 +31,8 @@ dependencies {
   implementation 'io.github.openfeign:feign-okhttp'
 
   // discovery
-  implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-discovery'
+  implementation 'org.springframework.cloud:spring-cloud-starter-consul-discovery'
+  // implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-discovery'
   // implementation "com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-config"
 
   // cairo
