--- a/check-service/build.gradle
+++ b/check-service/build.gradle
@@ -26,8 +26,9 @@ dependencies {
   implementation 'org.springframework.cloud:spring-cloud-starter-security'
   implementation 'org.springframework.cloud:spring-cloud-starter-oauth2'
 
-  // rpc
+  // routing
   implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+  implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
   implementation 'io.github.openfeign:feign-okhttp'
 
   // discovery
@@ -36,9 +37,8 @@ dependencies {
   // implementation "com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-config"
 
   // cairo
-  implementation "com.hfhk.cairo.starter:mongo:${cairoVersion}"
-  implementation "com.hfhk.cairo.starter:web:${cairoVersion}"
-  implementation "com.hfhk.cairo.starter:service:${cairoVersion}"
+  implementation "com.hfhk.cairo.starter:cairo-starter-mongo:${cairoVersion}"
+  implementation "com.hfhk.cairo.starter:cairo-starter-service:${cairoVersion}"
 
   implementation project(':check-domain')
 
