--- a/check-service/src/main/resources/application-local.yaml
+++ b/check-service/src/main/resources/application-local.yaml
@@ -1,49 +1,24 @@
-spring:
-  security:
-    oauth2:
-      resourceserver:
-        jwt:
-          jwk-set-uri: http://127.0.0.1:10000/.well-known/jwks.json
-  cloud:
-    nacos:
-      server-addr: 192.168.30.21:8848
-      discovery:
-        server-addr: 192.168.30.21:8848
-        namespace: local
-        group: local
-      # config:
-      #   server-addr: 192.168.30.21:8848
-      #   namespace: local
-      #   group: local
-      #   file-extension: yaml
-
-  data:
-    mongodb:
-      host: 192.168.30.21
-      port: 27017
-      username: hfhk
-      password: Hfhk.1320.
-      authentication-database: cairo
-      database: hfhk-check
-      auto-index-creation: true
-      gridfs:
-        database: hfhk-check
-      #field-naming-strategy: com.hfhk.cairo.mongo.strategy.UpperCamelCaseFieldNamingStrategy
-
-
-server:
-  port: 7822
-
-security:
-  oauth2:
+hfhk:
+  server:
+    port: 10030
+  auth:
+    server: auth.hfhksoft.com
     client:
-      id: cairo_service_system
-      client-id: cairo_service_system
-      client-secret: cairo_service_system
-      grant-type: client_credentials
-      access-token-uri: http://127.0.0.1:10000/oauth/token
-
-logging:
-  level:
-    root: info
-    com.hfhk: info
+      id: hfhk_check
+      secret: hfhk_check
+  mongo:
+    database: hfhk-check
+    gridfs:
+      database: hfhk-check
+      bucket: hfhk
+    authentication-database: hfhk
+    host: 192.168.30.21
+    port: 27017
+    username: hfhk
+    password: Hfhk.1320.
+  consul:
+    host: 192.168.30.21
+    port: 8500
+    discovery:
+      instance-zone: hfhk
+      instance-group: hfhk
