--- a/check-domain/build.gradle
+++ b/check-domain/build.gradle
@@ -1,5 +1,5 @@
 apply from: "${rootDir}/gradle/publish.gradle"
 
 dependencies {
-  compile "com.hfhk.auth:auth-domain:${cairoVersion}"
+  compile "com.hfhk.auth:auth-domain:${authVersion}"
 }
