这个故事还没有完结。——亚索

--- a/check-service/src/main/resources/application.yaml
+++ b/check-service/src/main/resources/application.yaml
@@ -89,6 +89,10 @@ feign:
         logger-level: FULL
         request-interceptors:
           - com.hfhk.cairo.feign.interceptor.RequestOAuth2RequestInterceptor
+      serviceSystemV1FileClientCredentialsClient:
+        logger-level: FULL
+        request-interceptors:
+          - com.hfhk.cairo.feign.interceptor.ClientOAuth2RequestInterceptor
       serviceSystemV1DictionaryClientCredentialsClient:
         logger-level: FULL
         request-interceptors:
