--- a/check-service/src/main/resources/application-local.yaml
+++ b/check-service/src/main/resources/application-local.yaml
@@ -20,5 +20,5 @@ hfhk:
     host: 192.168.30.22
     port: 8500
     discovery:
-      instance-zone: local
-      instance-group: local
+      instance-zone: hfhk
+      instance-group: hfhk
